<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.activity.PagamentoActivity"
	>

	<TextView
		android:id="@+id/pagamento_orientacao"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/pagamento_orientacao"
		android:textAlignment="center"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/pagamento_valor_compra"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="20dp"
		android:text="@string/valor_compra"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao"
		/>

	<TextView
		android:id="@+id/pagamento_valor_pacote"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@android:color/holo_green_light"
		android:textSize="24sp"
		app:layout_constraintStart_toStartOf="@+id/pagamento_valor_compra"
		app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_compra"
		tools:text="R$ 243,99"
		/>

	<EditText
		android:id="@+id/pagamento_cartao_numero"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:inputType="number"
		android:hint="@string/cartao_numero"
		android:maxLength="12"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_pacote"
		android:importantForAutofill="no"
		/>

	<EditText
		android:id="@+id/pagamento_cartao_mes"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="2"
		android:hint="@string/cartao_mes"
		android:inputType="number"
		android:textAlignment="center"
		android:maxLength="2"
		app:layout_constraintBottom_toBottomOf="@+id/pagamento_cartao_cvc"
		app:layout_constraintStart_toStartOf="@+id/pagamento_cartao_numero"
		android:importantForAutofill="no"
		/>

	<EditText
		android:id="@+id/pagamento_cartao_ano"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="2"
		android:hint="@string/cartao_ano"
		android:inputType="number"
		android:textAlignment="center"
		android:maxLength="2"
		app:layout_constraintBottom_toBottomOf="@+id/pagamento_cartao_cvc"
		app:layout_constraintStart_toEndOf="@+id/pagamento_cartao_mes"
		android:importantForAutofill="no"
		/>

	<EditText
		android:id="@+id/pagamento_cartao_cvc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
		android:ems="4"
		android:hint="@string/cartao_cvc"
		android:inputType="number"
		android:maxLength="3"
		app:layout_constraintEnd_toEndOf="@+id/pagamento_cartao_numero"
		app:layout_constraintTop_toBottomOf="@+id/pagamento_cartao_numero"
		android:importantForAutofill="no"
		/>

	<EditText
		android:id="@+id/pagamento_cartao_nome"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/cartao_nome"
		android:inputType="textCapCharacters"
		android:digits="@string/alfabeto"
		app:layout_constraintEnd_toEndOf="@+id/pagamento_cartao_cvc"
		app:layout_constraintStart_toStartOf="@+id/pagamento_cartao_mes"
		app:layout_constraintTop_toBottomOf="@+id/pagamento_cartao_cvc"
		android:importantForAutofill="no"
		/>

	<Button
		android:id="@+id/pagamento_botao_finalizar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:background="@drawable/plano_fundo_botao_pagamento"
		android:text="@string/finalizar_pagamento"
		android:textColor="@android:color/white"
		app:layout_constraintEnd_toEndOf="@+id/pagamento_cartao_nome"
		app:layout_constraintStart_toStartOf="@+id/pagamento_cartao_nome"
		app:layout_constraintTop_toBottomOf="@+id/pagamento_cartao_nome"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>