<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/pacote_viagens"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<ImageView
		android:id="@+id/pacote_viagens_banner"
		android:layout_width="0dp"
		android:layout_height="120dp"
		android:contentDescription="@string/banner"
		android:src="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/pacote_viagens_especiais"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/especiais"
		android:textColor="@android:color/white"
		android:textSize="24sp"
		app:layout_constraintStart_toStartOf="@+id/pacote_viagens_banner"
		app:layout_constraintTop_toTopOf="@id/pacote_viagens_banner"
		/>

	<TextView
		android:id="@+id/pacote_viagens_pais"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/país"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="@+id/pacote_viagens_especiais"
		app:layout_constraintTop_toBottomOf="@+id/pacote_viagens_especiais"
		/>

	<ListView
		android:id="@+id/pacote_viagens_lista"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:divider="@null"
		android:dividerHeight="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pacote_viagens_banner"
		tools:listitem="@layout/item_lista_pacotes"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>