<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<ImageView
		android:id="@+id/resumo_compra_banner"
		android:layout_width="0dp"
		android:layout_height="100dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@android:color/holo_orange_dark"
		/>

	<TextView
		android:id="@+id/resumo_compra_parabens"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/parabens"
		android:textColor="@android:color/white"
		android:textSize="30sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner"
		app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner"
		app:layout_constraintTop_toTopOf="@id/resumo_compra_banner"
		/>

	<TextView
		android:id="@+id/resumo_compra_realizada"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/compra_realizada"
		android:textAlignment="textStart"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner"
		app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"
		app:layout_constraintStart_toStartOf="@+id/resumo_compra_parabens"
		app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens"
		/>

	<TextView
		android:id="@+id/resumo_compra_confira"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/resumo_compra"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner"
		/>

	<ImageView
		android:id="@+id/resumo_compra_panoramica"
		android:layout_width="0dp"
		android:layout_height="150dp"
		android:layout_marginTop="8dp"
		android:contentDescription="@string/foto_panoramica"
		android:scaleType="centerCrop"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/resumo_compra_confira"
		tools:srcCompat="@drawable/sao_paulo_sp"
		/>

	<TextView
		android:id="@+id/resumo_compra_local"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/resumo_compra_panoramica"
		tools:text="São Paulo"
		/>

	<TextView
		android:id="@+id/resumo_compra_valor"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="@+id/resumo_compra_data"
		app:layout_constraintTop_toBottomOf="@+id/resumo_compra_data"
		tools:text="R$ 243,99"
		/>

	<TextView
		android:id="@+id/resumo_compra_data"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="@+id/resumo_compra_local"
		app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local"
		tools:text="31/01 - 02/02 de 2020"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>